--- a/shopweb/web/templates/order_ro.html
+++ b/shopweb/web/templates/order_ro.html
@@ -90,40 +90,40 @@ table tr th {
 		<div>
 			<img data-snip="logo"/>
 			<br />
-			<h3>Multumim pentru comanda facuta !</h3>
+			<h3 data-loc="thank.you"></h3>
 		</div>
 		<div class="order_info">
 			<table style="width: 400px" data-snip="info">
 				<tr>
-					<td align="left"><span id="field">Identificator comanda</span></td>
+					<td align="left"><span id="field" data-loc="order.id"></span></td>
 					<td align="left"><span id="oid"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span>Nume</span></td>
+					<td align="left"><span data-loc="order.last.name"></span></td>
 					<td align="left"><span id="lname"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span>Prenume</span></td>
+					<td align="left"><span data-loc="order.first.name"></span></td>
 					<td align="left"><span id="fname"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span>Judet/Sector</span></td>
+					<td align="left"><span data-loc="order.region"></span></td>
 					<td align="left"><span id="region"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span>Localitatea</span></td>
+					<td align="left"><span data-loc="order.city"></span></td>
 					<td align="left"><span id="city"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span>Adresa</span></td>
+					<td align="left"><span data-loc="order.address"></span></td>
 					<td align="left"><span id="address"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span>E-Mail</span></td>
+					<td align="left"><span data-loc="order.email"></span></td>
 					<td align="left"><span id="email"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span>Phone</span></td>
+					<td align="left"><span data-loc="order.phone"></span></td>
 					<td align="left"><span id="phone"></span></td>
 				</tr>
 
@@ -133,10 +133,10 @@ table tr th {
 		<div class="items">
 			<table>
 				<tr>
-					<th>Produs</th>
-					<th>Denumire</th>
-					<th>Cantitate</th>
-					<th>Pret unitar (RON)</th>
+					<th data-loc="order.data.product"></th>
+					<th data-loc="order.data.name"></th>
+					<th data-loc="order.data.quantity"></th>
+					<th data-loc="order.data.price"></th>
 				</tr>
 				<tr data-snip="content">
 					<td align="center"><img width="50" height="57" /></td>
