--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -90,7 +90,7 @@ a:active {
 	color: #ffffff;
 	position: fixed;
 	width: 100%;
-	z-index: 9999;
+	z-index: 80;
 	box-shadow: 0px 0px 30px 1px #444444;
 }
 
@@ -219,17 +219,21 @@ a:active {
 	float: left;
 }
 
-.center #pleft {
+#pleft {
 	width: 340px;
 	float: left;
 }
 
-.center #pright {
+#pright {
 	min-width: 400px;
 	width: 910px;
 	float: left;
 	margin-left: 20px;
 	margin-top: 20px;
+}
+
+.quickview #pright {
+	width: 600px;
 }
 
 #product_title {
@@ -588,4 +592,36 @@ a:active {
 
 #order #pf, #pj {
 	padding: 20px;
+}
+
+#product_dialog {
+	display: none;
+	padding: 10px;
+}
+
+.quickview {
+	text-align: left;
+}
+
+.blockMsg {
+	border-radius: 10px;
+	box-shadow: 0 0 30px 1px #222222;
+}
+
+.zoomContainer {
+	z-index: 9999;
+}
+
+#close_dialog {
+	float: right;
+	position: relative;
+}
+
+#title_dialog {
+	float: left;
+	position: relative;
+}
+
+#content_dialog {
+	clear: both;
 }
