--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -617,6 +617,10 @@ a:active {
 	position: relative;
 }
 
+#close_dialog:hover {
+	cursor: pointer;
+}
+
 #title_dialog {
 	float: left;
 	position: relative;
