--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -4,7 +4,7 @@
     <h1 data-snip="title"></h1>
   </div>
   <div id="close_dialog">
-    <a href="#"><img src="/static/images/close.png" /></a>
+    <img src="/static/images/close.png" />
   </div>
   <div id="content_dialog">
     <div id="pleft">
