--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -629,3 +629,10 @@ a:active {
 #content_dialog {
 	clear: both;
 }
+
+#dialog_footer {
+	clear: both;
+	float: right;
+	padding: 10px;
+	font-size: 16px;
+}
