--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -29,5 +29,10 @@
         </div>
       </div>
     </div>
+    <div id="dialog_footer">
+      <div data-snip="productlink">
+         <a href="#"></a>
+      </div>
+    </div>
   </div>
 </div>
