--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -1,5 +1,10 @@
 
 <ul>
+  <li data-snip="itemadd" id="itemadd">
+    <div class="item_box">
+      <img class="add_item" src="/static/images/add-item.png" />
+    </div>
+  </li>
   <li data-snip="item">
     <div class="item_box">
       <div class="info_tag">
