--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -1,12 +1,12 @@
 
 <div class="product_content quickview">
-  <div id="title_dialog">
+  <div class="title_dialog">
     <h1 data-snip="title"></h1>
   </div>
-  <div id="close_dialog">
+  <div class="close_dialog">
     <img src="/static/images/close.png" />
   </div>
-  <div id="content_dialog">
+  <div class="content_dialog">
     <div id="pleft">
       <div data-snip="images">
         <div id="detail_box">
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div id="dialog_footer">
+    <div class="dialog_footer">
       <div data-snip="productlink">
          <a href="#"></a>
       </div>
