--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -61,25 +61,25 @@
           <div id="pf" class="content">
             <form id="order_form">
               <div>
-                <label for="lname" data-loc="order.last.name"></label><input id="lname" name="lname" type="text" />
+                <label for="lname" data-loc="last.name"></label><input id="lname" name="lname" type="text" />
               </div>
               <div>
-                <label for="fname" data-loc="order.first.name"></label><input id="fname" name="fname" type="text" />
+                <label for="fname" data-loc="first.name"></label><input id="fname" name="fname" type="text" />
               </div>
               <div>
-                <label for="region" data-loc="order.region"></label><input id="region" name="region" type="text" />
+                <label for="region" data-loc="region"></label><input id="region" name="region" type="text" />
               </div>
               <div>
-                <label for="city" data-loc="order.city"></label><input id="city" name="city" type="text" />
+                <label for="city" data-loc="city"></label><input id="city" name="city" type="text" />
               </div>
               <div>
-                <label for="address" data-loc="order.address"></label><input id="address" name="address" type="text" />
+                <label for="address" data-loc="address"></label><input id="address" name="address" type="text" />
               </div>
               <div>
-                <label for="email" data-loc="order.email"></label><input id="email" name="email" type="text" />
+                <label for="email" data-loc="email"></label><input id="email" name="email" type="text" />
               </div>
               <div>
-                <label for="phone" data-loc="order.phone"></label><input id="phone" name="phone" type="number" />
+                <label for="phone" data-loc="phone"></label><input id="phone" name="phone" type="number" />
               </div>
               <div>
                 <div id="terms_wrapper">
@@ -94,34 +94,34 @@
           <div id="pj" class="content">
             <form id="order_form_company">
               <div>
-                <label for="cname" data-loc="order.company.name"></label><input id="cname" name="cname" type="text" />
+                <label for="cname" data-loc="company.name"></label><input id="cname" name="cname" type="text" />
               </div>
               <div>
-                <label for="cif" data-loc="order.company.cif"></label><input id="cif" name="cif" type="text" />
+                <label for="cif" data-loc="company.cif"></label><input id="cif" name="cif" type="text" />
               </div>
               <div>
-                <label for="cregcom" data-loc="order.company.reg.com"></label><input id="cregcom" name="cregcom" type="text" />
+                <label for="cregcom" data-loc="company.reg.com"></label><input id="cregcom" name="cregcom" type="text" />
               </div>
               <div>
-                <label for="cbank" data-loc="order.company.bank"></label><input id="cbank" name="cbank" type="text" />
+                <label for="cbank" data-loc="company.bank"></label><input id="cbank" name="cbank" type="text" />
               </div>
               <div>
-                <label for="cbankaccount" data-loc="order.company.bank.account"></label><input id="cbankaccount" name="cbankaccount" type="text" />
+                <label for="cbankaccount" data-loc="company.bank.account"></label><input id="cbankaccount" name="cbankaccount" type="text" />
               </div>
               <div>
-                <label for="cregion" data-loc="order.region"></label><input id="cregion" name="cregion" type="text" />
+                <label for="cregion" data-loc="region"></label><input id="cregion" name="cregion" type="text" />
               </div>
               <div>
-                <label for="ccity" data-loc="order.city"></label><input id="ccity" name="ccity" type="text" />
+                <label for="ccity" data-loc="city"></label><input id="ccity" name="ccity" type="text" />
               </div>
               <div>
-                <label for="caddress" data-loc="order.address"></label><input id="caddress" name="caddress" type="text" />
+                <label for="caddress" data-loc="address"></label><input id="caddress" name="caddress" type="text" />
               </div>
               <div>
-                <label for="cemail" data-loc="order.email"></label><input id="cemail" name="cemail" type="text" />
+                <label for="cemail" data-loc="email"></label><input id="cemail" name="cemail" type="text" />
               </div>
               <div>
-                <label for="cphone" data-loc="order.phone"></label><input id="cphone" name="cphone" type="number" />
+                <label for="cphone" data-loc="phone"></label><input id="cphone" name="cphone" type="number" />
               </div>
               <div>
                 <div id="terms_wrapper">
