--- a/shopweb/web/templates/order_company_ro.html
+++ b/shopweb/web/templates/order_company_ro.html
@@ -98,43 +98,43 @@ table tr th {
           <td align="left"><span id="oid"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.company.name"></span></td>
+          <td align="left"><span data-loc="company.name"></span></td>
           <td align="left"><span id="cname"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.company.cif"></span></td>
+          <td align="left"><span data-loc="company.cif"></span></td>
           <td align="left"><span id="cif"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.company.reg.com"></span></td>
+          <td align="left"><span data-loc="company.reg.com"></span></td>
           <td align="left"><span id="cregcom"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.company.bank"></span></td>
+          <td align="left"><span data-loc="company.bank"></span></td>
           <td align="left"><span id="cbank"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.company.bank.account"></span></td>
+          <td align="left"><span data-loc="company.bank.account"></span></td>
           <td align="left"><span id="cbankaccount"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.region"></span></td>
+          <td align="left"><span data-loc="region"></span></td>
           <td align="left"><span id="cregion"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.city"></span></td>
+          <td align="left"><span data-loc="city"></span></td>
           <td align="left"><span id="ccity"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.address"></span></td>
+          <td align="left"><span data-loc="address"></span></td>
           <td align="left"><span id="caddress"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.email"></span></td>
+          <td align="left"><span data-loc="email"></span></td>
           <td align="left"><span id="cemail"></span></td>
         </tr>
         <tr>
-          <td align="left"><span data-loc="order.phone"></span></td>
+          <td align="left"><span data-loc="phone"></span></td>
           <td align="left"><span id="cphone"></span></td>
         </tr>
 
@@ -145,10 +145,10 @@ table tr th {
     <div class="items">
       <table>
         <tr>
-          <th data-loc="order.data.product"></th>
-          <th data-loc="order.data.name"></th>
-          <th data-loc="order.data.quantity"></th>
-          <th data-loc="order.data.price"></th>
+          <th data-loc="product"></th>
+          <th data-loc="title"></th>
+          <th data-loc="quantity"></th>
+          <th data-loc="unit.price"></th>
         </tr>
         <tr data-snip="content">
           <td align="center"><img width="50" height="57" /></td>
