--- a/shopweb/web/templates/order_ro.html
+++ b/shopweb/web/templates/order_ro.html
@@ -99,31 +99,31 @@ table tr th {
 					<td align="left"><span id="oid"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span data-loc="order.last.name"></span></td>
+					<td align="left"><span data-loc="last.name"></span></td>
 					<td align="left"><span id="lname"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span data-loc="order.first.name"></span></td>
+					<td align="left"><span data-loc="first.name"></span></td>
 					<td align="left"><span id="fname"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span data-loc="order.region"></span></td>
+					<td align="left"><span data-loc="region"></span></td>
 					<td align="left"><span id="region"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span data-loc="order.city"></span></td>
+					<td align="left"><span data-loc="city"></span></td>
 					<td align="left"><span id="city"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span data-loc="order.address"></span></td>
+					<td align="left"><span data-loc="address"></span></td>
 					<td align="left"><span id="address"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span data-loc="order.email"></span></td>
+					<td align="left"><span data-loc="email"></span></td>
 					<td align="left"><span id="email"></span></td>
 				</tr>
 				<tr>
-					<td align="left"><span data-loc="order.phone"></span></td>
+					<td align="left"><span data-loc="phone"></span></td>
 					<td align="left"><span id="phone"></span></td>
 				</tr>
 
@@ -133,10 +133,10 @@ table tr th {
 		<div class="items">
 			<table>
 				<tr>
-					<th data-loc="order.data.product"></th>
-					<th data-loc="order.data.name"></th>
-					<th data-loc="order.data.quantity"></th>
-					<th data-loc="order.data.price"></th>
+					<th data-loc="product"></th>
+					<th data-loc="title"></th>
+					<th data-loc="quantity"></th>
+					<th data-loc="unit.price"></th>
 				</tr>
 				<tr data-snip="content">
 					<td align="center"><img width="50" height="57" /></td>
