--- a/shopweb/web/static/css/jquery-te-1.4.0.css
+++ b/shopweb/web/static/css/jquery-te-1.4.0.css
@@ -9,7 +9,7 @@
 
 /* editor's general field */
 .jqte {
-	margin:0px;
+ 	margin:0px;
 	border:#bbbbbb 1px solid;
 	border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px;
 	box-shadow:0 0 3px #999; -webkit-box-shadow:0 0 3px #999; -moz-box-shadow:0 0 3px #999;
@@ -343,7 +343,7 @@
 	overflow:auto;
 	outline:none;
 	word-wrap:break-word; -ms-word-wrap:break-word;
-	resize:vertical
+	resize:vertical;
 }
 .jqte_editor div, .jqte_editor p {
 	margin:0 0 7px
