--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -7,6 +7,11 @@
   </li>
   <li data-snip="item">
     <div class="item_box">
+      <div class="edit_tag">
+         <div class="edit_tag_close">
+            <img src="/static/images/close.png" />
+         </div>
+      </div>
       <div class="info_tag">
         <div class="info_tag_text"></div>
         <div class="info_tag_cart ">
