--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -161,6 +161,7 @@ a:active {
 }
 
 .cat_box {
+	border-radius: 10px;
 	border: 1px solid #dddddd;
 	width: 312px;
 	height: 356px;
@@ -169,6 +170,7 @@ a:active {
 .item_box {
 	width: 312px;
 	height: 356px;
+	border-radius: 10px;
 }
 
 .item_box:hover {
@@ -196,12 +198,25 @@ a:active {
 
 .info_tag {
 	position: relative;
-	width: 305px;
+	width: 100%;
 	height: 70px;
-	top: 280px;
-	margin: 3px;
-	background: rgba(255, 255, 255, .5);
+	top: 256px;
+	margin: 0px;
+	background: rgba(255, 255, 255, .6);
 	box-shadow: 0px 0px 35px 1px #dddddd;
+	border-radius: 0 0 10px 10px;
+}
+
+.edit_tag {
+	position: relative;
+	width: 305px;
+	height: 30px;
+}
+
+.edit_tag_close {
+    position: relative;
+    float: right;
+    top: 5px;
 }
 
 .info_tag_price {
@@ -232,7 +247,7 @@ a:active {
 }
 
 .cat_tag {
-	
+	top: 286px;
 }
 
 .cat_text {
@@ -751,10 +766,15 @@ a:active {
   position: relative;
   float: left;
 }
+.specs_title {
+  font-size: 16px;
+  float: left;
+  margin-top: 5px;
+  margin-right: 10px;
+}
 
-#prop_fields .row {
+.specs .row {
   width: 300px;
-  margin-left: 10px;
 }
 
 #prop_fields input {
