--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -44,9 +44,9 @@
         </div>
         <div id="edit">
  
-          <form action="/product/create" id="edit_form" method="POST">
+          <form action="/product/edit" id="edit_form" method="POST">
           
-            <div class="upload_form_fields">
+            <div class="upload_form_fields" data-snip="edit">
 
   			  <div class="tab_select">
                 <ul id="edit_product_tab" class="create_product_tab">
