--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -17,13 +17,24 @@ html,body {
 	font-weight: 300;
 }
 
-b {
+b, strong {
   font-weight: bold;
 }
 
-textarea, input, select {
-	font-size: 16px;
+p {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+input {
 	height: 26px;
+}
+
+textarea, input, select, .preview {
+	font-size: 16px;
 	border: 1px solid #bbbbbb;
 	box-shadow: 0px 0px 15px 1px #dddddd;
 }
@@ -474,6 +485,7 @@ a:active {
 	font-size: 16px;
 	height: 26px;
 	width: 250px;
+	margin-right: 5px;
 }
 
 #order form div {
@@ -549,11 +561,25 @@ a:active {
     position: relative;
 }
 
-.upload_form_fields textarea {
+.upload_form_fields textarea, .preview {
    width: 100%;
-   height: 100%;
+   height: 250px;
    resize: none;
 }
+
+.preview {
+   display: none;
+   overflow: auto;
+}
+
+.left {
+   float:left;
+}
+
+.right {
+   float:right;
+}
+
 
 .form_textzone {
    float: left;
@@ -835,10 +861,9 @@ a:active {
   width: 100%;
 }
 
-#prop_fields input {
+#prop_fields input, #edit_prop_fields input {
   width: 220px;
   float: left;
-  margin-right: 10px;
 }
 
 .clickable:hover {
@@ -864,4 +889,8 @@ a:active {
 #save_product {
   font-size: 18px;
   margin-top: 10px;
+}
+
+.hidden {
+  display: none;
 }
